--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 /* ==================================
-   Section - Подключение шрифтов
-   ================================= */
+  Section - Подключение шрифтов
+================================= */
 @font-face {
   font-family: "Releway";
   font-weight: 800;
@@ -38,8 +38,8 @@
 }
 
 /* ==================================
-              Section - Переменные
-              ================================= */
+  Section - Переменные
+================================= */
 :root {
   --primary-ff: "Rubik", arial, helvetica, sans-serif;
   --secondary-ff: "Releway", arial, helvetica, sans-serif;
@@ -60,8 +60,8 @@
 }
 
 /* ==================================
-              Section - Глобальные стили
-              ================================= */
+  Section - Глобальные стили
+================================= */
 
 html {
   box-sizing: border-box;
@@ -103,8 +103,8 @@ img {
 }
 
 /* ==================================
-              Section - Переиспользуемые классы
-              ================================= */
+  Section - Переиспользуемые классы
+================================= */
 
 .visually-hidden {
   position: absolute;
@@ -145,8 +145,8 @@ img {
 }
 
 /* ==================================
-              Section - Типографика
-              ================================= */
+  Section - Типографика
+================================= */
 
 .title-1 {
   font-family: var(--secondary-ff);
@@ -197,8 +197,8 @@ img {
 }
 
 /* ==================================
-                Section - Кнопки
-                ================================= */
+  Section - Кнопки
+================================= */
 
 .button {
   font-family: var(--secondary-ff);
@@ -280,8 +280,8 @@ img {
 }
 
 /* ==================================
-              Section - Page Header
-              ================================= */
+  Section - Page Header
+ ================================= */
 
 .page-header {
   margin-top: 40px;
@@ -524,7 +524,7 @@ img {
 
   display: flex;
 
-  margin-left: 10px;
+  margin-right: 10px;
 
   color: inherit;
   border-radius: 20px;
@@ -532,8 +532,8 @@ img {
   align-items: center;
 }
 
-.user-menu-item:first-child .user-menu-link {
-  margin-left: 0;
+.user-menu-item:last-child .user-menu-link {
+  margin-right: 0;
 }
 
 .user-menu-link:hover {
@@ -709,16 +709,16 @@ img {
 }
 
 /* ==================================
-              Section - Page Main
-              ================================= */
+  Section - Page Main
+================================= */
 
 .main {
   flex-grow: 1;
 }
 
 /* ==================================
-              Section - Секция слайдер
-              ================================= */
+  Section - Секция слайдер
+================================= */
 
 .slider {
   position: relative;
@@ -792,7 +792,7 @@ img {
 }
 
 .slider-item-column:nth-child(2) {
-  padding-top: 130px;
+  padding-top: 132px;
 }
 
 .slider-title {
@@ -815,7 +815,7 @@ img {
 }
 
 .slider-description {
-  margin-bottom: 43px;
+  margin-bottom: 41px;
 }
 
 .slider-navigation-buttom {
@@ -899,8 +899,8 @@ img {
 }
 
 /* ==================================
-              Section - Категория товаров
-              ================================= */
+  Section - Категория товаров
+================================= */
 
 .categories {
   padding-top: 70px;
@@ -978,8 +978,8 @@ img {
 }
 
 /* ==================================
-              Section - Сервисы
-              ================================= */
+ Section - Сервисы
+================================= */
 
 .services {
   background: var(--b-light)
@@ -1069,8 +1069,8 @@ img {
 }
 
 /* ==================================
-              Section - Доставка
-              ================================= */
+  Section - Доставка
+================================= */
 
 .delivery {
   margin-top: 134px;
@@ -1146,8 +1146,8 @@ img {
 }
 
 /* ==================================
-              Section - О компании
-              ================================= */
+  Section - О компании
+================================= */
 
 .company {
   display: -ms-grid;
@@ -1198,7 +1198,7 @@ img {
   display: -ms-grid;
   display: grid;
 
-  margin-top: 72px;
+  margin-top: 70px;
   margin-bottom: 60px;
 
   row-gap: 10px;
@@ -1257,12 +1257,12 @@ img {
 }
 
 .contacts-schedule {
-  margin-bottom: 60px;
+  margin-bottom: 55px;
 }
 
 /* ==================================
-              Section - Рассылка
-              ================================= */
+  Section - Рассылка
+================================= */
 
 .newsletters {
   padding-top: 67px;
@@ -1446,16 +1446,16 @@ img {
 }
 
 /* ==================================
-              Section - Каталог Page Header
-              ================================= */
+  Section - Каталог Page Header
+================================= */
 
 .link-exit {
   color: rgba(125, 125, 125, 0.3);
 }
 
 /* ==================================
-                Section - Каталог Page Main
-                ================================= */
+  Section - Каталог Page Main
+================================= */
 .inner-header {
   padding: 37px 60px 44px;
 }
@@ -1528,8 +1528,8 @@ img {
   outline: none;
 }
 /* ==================================
-              Section - Страница каталог
-              ================================= */
+  Section - Страница каталог
+================================= */
 
 .catalog-title {
   font-size: 16px;
@@ -1821,6 +1821,7 @@ img {
 
 .catalog-filter-label {
   display: flex;
+  flex-wrap: wrap;
   color: rgba(0, 0, 0, 0.3);
 }
 
@@ -1970,7 +1971,7 @@ img {
 
   width: 100%;
   margin-bottom: 52px;
-  padding: 15px 0;
+  padding: 15px 20px;
 
   cursor: pointer;
 
@@ -2001,17 +2002,16 @@ img {
 
   flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
 }
 
 .pagination-sublist {
   display: flex;
 
   width: 100%;
-  min-width: 169px;
-  max-width: 169px;
+  min-width: 209px;
   margin-right: auto;
   margin-left: auto;
+  padding: 0 20px;
 
   flex-wrap: wrap;
   justify-content: space-between;
@@ -2059,16 +2059,16 @@ img {
 }
 
 .pagination-item-prev {
-  margin-right: 187px;
+  margin-right: 168px;
 }
 
 .pagination-item-next {
-  margin-left: 128px;
+  margin-left: 107px;
 }
 
 /* ==================================
-              Section - Page Footer
-              ================================= */
+  Section - Page Footer
+================================= */
 
 .page-footer {
   font-size: 20px;
@@ -2089,7 +2089,7 @@ img {
 
 .footer-item:nth-child(2) {
   margin-right: auto;
-  margin-left: 110px;
+  margin-left: 91px;
 }
 
 .footer-logo {
@@ -2160,6 +2160,11 @@ img {
   margin-bottom: 57px;
 }
 
+.footer-menu-item {
+  max-width: 170px;
+  padding-left: 30px;
+}
+
 .footer-menu-link {
   font-family: var(--secondary-ff);
   font-size: 18px;
@@ -2167,7 +2172,7 @@ img {
 
   position: relative;
 
-  padding: 14px 14px;
+  padding: 14px 0;
 
   text-align: center;
   letter-spacing: 0.2em;
@@ -2180,8 +2185,8 @@ img {
   position: absolute;
   right: 15px;
   bottom: 6px;
-  left: 13px;
-
+  left: 0;
+  width: 100%;
   display: none;
 
   height: 2px;
@@ -2212,7 +2217,7 @@ img {
 .footer-social-list {
   display: flex;
 
-  margin-left: 154px;
+  margin-left: 173px;
 }
 
 .footer-social-item {
@@ -2262,6 +2267,11 @@ img {
   opacity: 0.3;
 
   fill: var(--b-dark);
+}
+
+.footer-authors {
+  text-align: end;
+  width: 180px;
 }
 
 .footer-author-link {
@@ -2326,6 +2336,10 @@ img {
   background-color: var(--b-grey-light);
 
   justify-content: flex-end;
+}
+
+.catalog-filter {
+  width: 200px;
 }
 
 .catalog-filter-item {
@@ -2597,8 +2611,8 @@ img {
 }
 
 /* ==================================
-              Modal window
-              ================================= */
+  Modal window
+================================= */
 
 .overlay {
   position: fixed;
